Changelog
=========

1.0b23 - Unreleased
-------------------

* Fix quoting of operators for multi-word search terms.
  [witsch]

* Use the faster C implementations of `elementtree`/`xml.etree` if available.
  [hannosch, witsch]

* Grant restricted code access to the search results, e.g. skin scripts.
  [do3cc, witsch]

* Fix handling of 'depth' argument when querying multiple paths.
  [reinhardt, witsch]

* Don't break when filter queries should be used for all parameters.
  [reinhardt, witsch]

* Always provide values for all metadata columns like the catalog does.
  [witsch]

* Always fall back to portal catalog for "navtree" queries so the set of
  required query parameters can be empty.
  This refs http://plone.org/products/collective.solr/issues/18
  [reinhardt, witsch]

* Prevent parsing errors for dates from before 1000 A.D. in combination
  with 32-bit systems and Solr 1.4.
  [reinhardt, witsch]

* Don't process content with its own indexing methods, e.g. `reindexObject`,
  via the `reindex` maintenance view.
  [witsch]

* Let query builder handle sets of possible boolean values as passed by
  boolean topic criteria for example.
  [hannosch, witsch]

* Recognize new ``solr.TrieDateField`` field type and handle it in the same
  way as we handle the older ``solr.DateField``.
  [hannosch]

* Warn about missing search indices and non-stored sort parameters.
  [witsch]

* Fix issue when reindexing objects with empty date fields.
  [witsch]

* Changed the default schema for ``is_folderish`` to store the value. The
  reference browser search expects it on the brain.
  [hannosch]

* Changed the GenericSetup export/import handler for the Solr manager to
  ignore non-persistent utilities.
  [hannosch]

* Add support for LinguaPlone.
  [witsch]

* Update sample Solr buildout configuration and documentation to recommend a
  high enough default setting for maximum search results returned by Solr.
  This refs http://plone.org/products/collective.solr/issues/20